--- a/index.css
+++ b/index.css
@@ -35,10 +35,10 @@ button {
 button:hover {
     opacity: 0.9;
 }
-#myCanvas {
-    margin-top: 20px;
-    width: 66.6%; /* 캔버스의 너비를 줄입니다. */
-    height: auto; /* 캔버스의 높이를 자동으로 조정합니다. */
+  #myCanvas {
+        margin-top: 20px;
+        display: block; /* 블록 레벨 요소로 변경하여 가로 전체를 차지하도록 함 */
+        max-width: 100%; /* 캔버스의 최대 너비를 부모 요소의 너비에 맞춤 */
 }
 @media (max-width: 768px) {
     .label, .unit, button, input {
