--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ button {
 #myCanvas {
     display: block; /* 캔버스를 블록 레벨 요소로 명시적으로 설정 */
     margin: 0 auto; /* 상하 마진 0, 좌우 마진 자동으로 설정하여 가운데 정렬 */
-    max-width: 100%;
+    /*max-width: 100%;*/
 }
 #canvasContainer {
     text-align: center; /* 캔버스 컨테이너를 가운데 정렬 */
