--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+hr {
+     border-color: #dcdcdc;
+}
+    
 #container {
     display: block; /* 컨테이너를 블록 레벨 요소로 변경 */
     text-align: center;
