--- a/index.css
+++ b/index.css
@@ -5,10 +5,24 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-hr {
-    border: 0; /* 기존 테두리를 제거합니다 */
-    height:0.2px; /* 선의 높이를 지정합니다 */
-    background-color: #d3d3d3; /* 배경 색상을 빨간색으로 지정합니다. 이것이 선의 색상이 됩니다. */
+.hr-sect {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.35);
+    font-size: 12px;
+    margin: 8px 0px;
+  }
+  .hr-sect::before,
+  .hr-sect::after {
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.35);
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 16px;
+  }
 
 }
 .highlight {
