--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     flex-basis: 100%;
     align-items: center;
     color: rgba(0, 0, 0, 0.35);
-    font-size: 12px;
+    font-size:  1.2em;
     margin: 8px 0px;
   }
   .hr-sect::before,
